# imi_assignment_1

./: .gitignore  README.md  pyproject.toml
doc/: report.typ
src/imi_assignment_1/: __main__.py  data_loader.py  hopfield_network.py  transforms.py
