[project]
name = "imi-assignment-1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mitukou1109", email = "mitukou1109@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "pillow>=10.3.0",
    "matplotlib>=3.8.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/imi_assignment_1"]
